fix: :lipstick: update events spacing (#25)

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -214,6 +214,9 @@ nav
 .month-block
   margin-top: 2rem
   margin-bottom: 2rem
+  @media screen and ( min-width: 576px )
+    margin-left: 5rem
+    margin-right: 5rem
   @media screen and ( min-width: 960px )
     margin-bottom: 5rem
 
@@ -246,7 +249,7 @@ nav
     margin-bottom: -2.25rem
     font-size: 2.8rem
   @media screen and ( min-width: 960px )
-    margin-bottom: -3rem
+    margin-bottom: -3.2rem
     font-size: 3.5rem
 
 .month-title-right
@@ -260,7 +263,7 @@ nav
   @media screen and ( min-width: 740px )
     margin-top: -1.25rem
   @media screen and ( min-width: 960px )
-    margin-top: -1.5rem
+    margin-top: -2rem
     div
       margin-bottom: -0.5rem
 
